--- a/css/responsive.css
+++ b/css/responsive.css
@@ -15,7 +15,7 @@
 
   textarea,
   .textarea {
-    height: 200px;
+    height: 140px;
   }
 }
 
