--- a/css/shared.css
+++ b/css/shared.css
@@ -32,8 +32,9 @@ textarea,
 .textarea {
   display: block;
   width: 100%;
-  height: 250px;
+  height: 160px;
   resize: none;
+  overflow-y: auto;
 }
 
 textarea:focus {
@@ -43,10 +44,6 @@ textarea:focus {
 .container {
   max-width: 1280px;
   margin: auto;
-}
-
-.translating-output {
-  background-color: rgba(128, 128, 128, 0.1);
 }
 
 a {
@@ -82,10 +79,14 @@ a {
   background-color: white;
 }
 
-.btn-circular.transparent{
+.btn-circular.transparent {
   background-color: transparent;
 }
 
 .translation-box {
   position: relative;
+}
+
+.gray {
+  background-color: rgba(128, 128, 128, 0.1);
 }
